# starfit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  download-data.sh  meson.build  pypi_build.sh  pyproject.toml  setup.cfg  setup.py  xxx.txt
.github/workflows/: pre-commit.yml  publish.yml  test.yml
docs/: conf.py  contributions.md  index.rst  installation.md
docs/source/: api.rst  conf.py  contributions.md  custom_data.md  index.rst  installation.md  modules.rst  usage.md
src/starfit/: __init__.py  abu_proc.py  dbtrim.py  direct.py  double.py  fit.py  ga.py  meson.build  multi.py  read.py  single.py  star.py  starfit.py  starplot.py  utils.py
src/starfit/autils/: .gitignore  __init__.py  abumodel.py  abuset.py  abusets.py  byte2human.py  isotope.py  keputils.py  loader.py  logged.py  physconst.py  stardb.py  time2human.py  utils.py  uuidtime.py  version2human.py
src/starfit/autils/human/: __init__.py  byte.py  config.py  power.py  prefix.py  range.py  template.py  time.py  unit.py  util.py  value.py  version.py
src/starfit/data/db/: .hashlist
src/starfit/data/ref/: .hashlist
src/starfit/data/stars/: .hashlist
src/starfit/example/: lc12_stardb.py
src/starfit/fitness/: .f2py_f2cmap  .gitignore  Makefile  abu_data.f90  fitness.pyf  fitting.f90  linalg.f90  make_pyf.txt  meson.build  mfitness.f90  mleqs.f90  norm.f  norm.f90  norm.inc  powell.f90  solver.f90  solver.py  solver.pyf  star_data.f90  test.f90  test_leqs.f90  tests.f90  type_def.f90  typedef.f90  utils.f90
src/starfit/solgen/: meson.build  solgen.f90
tests/: benchmark.py  test_00_direct.py  test_01_single.py  test_02_double.py  test_02_single.py  test_03_ga.py  test_03_single.py  test_04_multi.py  test_04_single.py  test_05_single.py  test_05_stars.py  test_06_database.py  test_06_single.py  test_07_abuset.py  test_07_single.py  test_30_ga.py  test_single.py
