[build-system]
requires = ["meson-python>=0.9.0", "numpy>=1.23.3", "wheel"]
build-backend = 'mesonpy'

[project]
name = "starfit"
license = {file = "LICENSE"}
description = "A stellar abundance matching code"
authors = [
    { name = "Conrad Chan", email = "ctchan@swin.edu.au" },
    { name = "Alexander Heger", email = "alexander.heger@monash.edu" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.21",
    "scipy",
    "matplotlib",
    "setuptools",
    "psutil",
    "pyyaml",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ['version']

[project.optional-dependencies]
testing = [
    "pytest",
]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["isotope", "matplotlib" ,"numpy", "scipy"]

[tool.flake8]
max_line_length = 131
extend_ignore = ["E203", "W503", "E402", "E501", "E722", "E731", "E741"]
exclude = [".tox", ".git", "build", "dist", "tests", ".eggs", "docs/conf.py"]
