# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = starfit
description = A stellar abundance matching code
author = Conrad Chan
author_email = ctchan@swin.edu.au
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/conradtchan/StarFit

# Add here related links, for example:
# project_urls =
#    Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

platforms = any

classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages =
    starfit
    starfit.autils
    starfit.fitness
    starfit.solgen
package_dir =
    =src

python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    setuptools
    psutil

[options.package_data]
starfit =
    data/db/*.stardb.gz
    data/ref/*.dat
    data/stars/*.dat

[options.extras_require]
testing =
    pytest

[bdist_wheel]
universal = 1

[tool:isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
known_third_party=isotope,matplotlib,numpy,scipy

[flake8]
max_line_length = 120
extend_ignore = E203, W503, E402, E501, E741 #,E129, W504
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    .git
    build
    dist
    tests
    .eggs
    docs/conf.py
